# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
andreymishuk_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: cli.py
brain_games/scripts/: brain_even.py  brain_games.py  helper.py  vie.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
