[tool.poetry]
packages = [
        { include = "brain_games" },
]
name = "AndreyMishuk_brain_games"
version = "0.0.2"
description = ""
authors = ["AndreyMishuk <andreygim.am@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_cacl:main"
